Reorganization, change selection, disable saving

--- a/style.css
+++ b/style.css
@@ -118,8 +118,10 @@ input[type="radio"] {
     height: 1.0em;
 }
 
-input[type="number"] {
-    width: 7.5em;
+input[type="number"],
+input[type="text"] {
+    width: 15em;
+    font-size: 50%;
 }
 
 h1,
@@ -147,6 +149,7 @@ h3 {
 
 span {
     font-size: smaller;
+    white-space: nowrap;
 }
 
 .route-box {
